Use Shift+A for adding links too (like in Blender!)

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -68,7 +68,7 @@ html(lang='en')
 								.btn-group
 									button.btn.btn-submit.wgt-toggle-submit(
 									data-action="publish",
-									title="{{ _('Submit a Link') }}")
+									title="{{ _('Submit a Link [Shift+A]')}}")
 										i.pi-link
 										| {{ _('Submit Link') }}
 
@@ -129,7 +129,7 @@ html(lang='en')
 									a.btn.btn-submit(
 										href="{{ url_for('users.login') }}",
 										data-action="publish",
-										title="{{ _('Submit a Link')}}")
+										title="{{ _('Submit a Link [Shift+A]')}}")
 										i.pi-link
 										| {{ _('Submit Link') }}
 
