--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -1,9 +1,14 @@
 | {% extends 'dillo/layout.html' %}
 | {% set page_name = 'posts-index' %}
+
+| {% block page_title %}
+| {{ (col_right['post'].name if 'post' in col_right else 'Home') }}
+| {% endblock page_title %}
+
 | {% block bodyattrs %}
 | {{ super() }}
 | class='{{ page_name }}{% if current_user.is_authenticated %} logged-in{% endif %}' data-context='{{ page_name }}'
-| {% endblock %}
+| {% endblock bodyattrs %}
 
 | {% block og %}
 | {% if 'post' in col_right %}
