--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -3,7 +3,9 @@ html(lang='en')
 	head
 		meta(charset='utf-8')
 		title
-			| {% if self.page_title() %}{% block page_title %}{% endblock %} — {% endif %}Dillo
+			| {% if self.page_title() %}{% block page_title %}{% endblock %}— {% endif %}
+			| {{ project.name }}
+
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
 		| {% block head %}{% endblock head %}
