--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -23,7 +23,7 @@
 				ul
 					li#item-category {{ node.properties.category | undertitle }}
 					li
-						a(href="{{ url_for('posts.view', post_shortcode=node.properties.shortcode, _external=True) }}")
+						a(href="{{ url_for('posts.view', community_url=node.project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
 							| {{ node._created | pretty_date }}
 					li
 						a(href="/u/{{ node.user.username }}")
@@ -77,14 +77,14 @@
 			| {% endif %}
 			a(
 				title="Share on Facebook",
-				href="https://www.facebook.com/sharer/sharer.php?u={{ node.name }}%20{{ url_for('posts.view', post_shortcode=node.properties.shortcode, _external=True) }}",
+				href="https://www.facebook.com/sharer/sharer.php?u={{ node.name }}%20{{ url_for('posts.view', community_url=node.project.url, post_shortcode=node.properties.shortcode, _external=True) }}",
 				target="_blank")
 				i.pi-social-facebook
 				| Share
 
 			a(
 				title="Share on Twitter",
-				href="https://twitter.com/home?status={{ node.name }} @{{ config.SETTINGS_TWITTER_USERNAME }} {{ url_for('posts.view', post_shortcode=node.properties.shortcode, _external=True) }} %23b3d" ,
+				href="https://twitter.com/home?status={{ node.name }} @{{ config.SETTINGS_TWITTER_USERNAME }} {{ url_for('posts.view', community_url=node.project.url, post_shortcode=node.properties.shortcode, _external=True) }} %23b3d" ,
 				target="_blank")
 				i.pi-social-twitter
 				| Tweet
