Use https for favicons loading

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -174,7 +174,7 @@ script.
 						'{{#is_link}}' +
 							'<li class="item-favicon">' +
 								'<a class="js-follow-link" href="{{ link_url }}" target="_blank">' +
-									'<img title="Link" src="http://www.google.com/s2/favicons?domain={{ link_url }}"/>' +
+									'<img title="Link" src="https://www.google.com/s2/favicons?domain={{ link_url }}"/>' +
 								'</a>' +
 							'</li>' +
 						'{{/is_link}}' +
