--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -21,7 +21,7 @@
 					placeholder="Paste or type the URL here",
 					value="{{ node.properties.content }}")
 					#item-icon.loading
-						img(src="http://www.google.com/s2/favicons?domain={{ node.properties.content }}")
+						img(src="https://www.google.com/s2/favicons?domain={{ node.properties.content }}")
 
 				.input-content.name
 					label(for="name") Title
