--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -50,7 +50,7 @@
 			href="{{ node.properties.content }}",
 			target="_blank",
 			title="Visit URL")
-			img.favicon(src="http://www.google.com/s2/favicons?domain={{ node.properties.content }}")
+			img.favicon(src="https://www.google.com/s2/favicons?domain={{ node.properties.content }}")
 			| {{ node.properties.content }}
 		| {% else %}
 		span.item-link-data There should be content here.
