Fix notifications not showing up

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -8,8 +8,10 @@
 ::-webkit-scrollbar-thumb
   background-color: rgba($color-background-darker, .3)
 
-a:hover
-  color: $color-primary
+// Override Pillar's notifications style
+#notifications
+  right: 15px
+  top: 55px
 
 #col_main::-webkit-scrollbar-thumb
   background-color: transparent
