--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -86,6 +86,8 @@ html(lang='en')
 											href="/notifications/read-all")
 											| {{ _('Mark All as Read') }}
 
+										| {% include '_notifications.html' %}
+
 							li.dropdown.wgt-dropdown-toggle
 								.dropdown-toggle
 									img.avatar(
