Don't wrap buttons

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -164,6 +164,7 @@
 button, .btn
   padding-top: 4px
   padding-bottom: 4px
+  white-space: nowrap
 
   +button($color-primary, 3px, false)
   text-decoration: none
