Don't overflow hidden details on list

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -91,8 +91,10 @@
     .item-date a
       white-space: nowrap
 
-    .item-comments i
-      +media-sm
+    .item-comments
+      margin-left: auto
+
+      &:before
         display: none
 
 .listing-empty
