Update title on onRenderHandler

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -316,6 +316,7 @@ script.
 
 	var onRenderHandler = function() {
 		twemoji.parse(document.body);
+		updateTitle(unread_on_load, page_title);
 	}
 
 	search.on('render', onRenderHandler);
