--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -75,6 +75,7 @@ li
 		#list-pagination
 
 #col_right.listing-view
+	.fullscreen-overlay.js-toggle-fullscreen
 	#list-item
 		| {% if 'post' in col_right %}
 		.item-view.loading
