--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -31,7 +31,7 @@
   &.fullscreen
     position: absolute
     width: 100%
-    background-color: rgba($color-background, .8)
+    background-color: rgba($color-background, .7)
 
     .item-view-close
       display: block
@@ -60,8 +60,7 @@
           max-width: 110%
 
       .item-view
-        box-shadow: 0 0 1px 0 rgba($color-background-darker, .2)
-        box-shadow: 0 0 1px 0 rgba($color-background-darker, .2), 0 0 150px rgba($color-background-darker, .33)
+        box-shadow: 0 0 1px 0 rgba($color-background-darker, .2), 1px 1px 5px rgba($color-background-darker, .1), 0 15px 100px rgba($color-background-darker, .2)
         transform: translateY(15px)
 
 #col_main
