Don't show status if pending on form

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -92,9 +92,11 @@
 
 
 		.item-edit-header
+			| {% if node.properties.status != 'pending' %}
 			.item-status
 				| Status:
 				span {{ node.properties.status | undertitle }}
+			| {% endif %}
 			.item-edit-header-action
 
 				| {% if node.properties.status == 'published' %}
