Less padding right on comments

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -585,7 +585,7 @@ body[data-context="post-edit"]
 
     .comment-container,
     .comment-reply-container
-      padding: 10px 25px
+      padding: 10px 10px 10px 25px
 
   &.is-own
     .item-rating
